--- a/src/pug/sections/_review-content.pug
+++ b/src/pug/sections/_review-content.pug
@@ -1,14 +1,27 @@
 section.article.pt-120
 	.container
-		.article-content.grid-850
-			.article-content__left
-				p Vivint Smart Homes is a great option for home or business owners to help protect their property with both professional and DIY installation. Vivint’s new Command platform with top-of-the-line equipment comes with 24/7 monitoring, smart touchscreen equipment, and free customer support. It offers next-gen security via smart technology, video surveillance, and complete mobile control. You can create a home security system to best suit your specific needs
-			
-			.article-content__right
-				p  Vivint’s new Command platform with top-of-the-line equipment comes with 24/7 monitoring
+		.article-content
+			.article-row.grid-850
+				.article-content__left
+					p Vivint Smart Homes is a great option for home or business owners to help protect their property with both professional and DIY installation. Vivint’s new Command platform with top-of-the-line equipment comes with 24/7 monitoring, smart touchscreen equipment, and free customer support. It offers next-gen security via smart technology, video surveillance, and complete mobile control. You can create a home security system to best suit your specific needs
+				
+				.article-content__right
+					p  Vivint’s new Command platform with top-of-the-line equipment comes with 24/7 monitoring
 		
-		.article-content.grid-850
-			.article-content__left
+			.article-row
+				.flex-wrapper
+					.pros-list
+						ul
+							li All-in-one touchscreen panels with premium packages
+							li 24-hour monitoring
+							li Custom solutions and smart controls
+
+					.cons-list
+						ul
+							li May be costly
+							li Costly add-ons
+			.article-row
+			
 				img(src="./img/vivint-post1.jpg", width="850" alt="img")
 				h2 Features and Highlights
 
@@ -25,5 +38,16 @@ section.article.pt-120
 				p Vivint is well-known for quickly setting up initial consultations, sometimes even on the same day. This is a helpful service for homeowners who don’t want a long, drawn-out installation process. With Vivint, consumers can request a free quote and have a sales representative call them back with 24 hours.
 				
 				strong Quality
-				p Vivint is accredited by the Better Business Bureau and uses rigorously tested equipment. Installation is done by trained professionals.  
+				p Vivint is accredited by the Better Business Bureau and uses rigorously tested equipment. Installation is done by trained professionals. 
+			
+			.article-row.grid-850
+				.article-content__left
+					strong Initial consultation
+					p Vivint is well-known for quickly setting up initial consultations, sometimes even on the same day. This is a helpful service for homeowners who don’t want a long, drawn-out installation process. With Vivint, consumers can request a free quote and have a sales representative call them back with 24 hours.
+
+					strong Quality
+					p Vivint is accredited by the Better Business Bureau and uses rigorously tested equipment. Installation is done by trained professionals.  
+				.article-content__right
+					
+					p Consumers can request a free quote and have a sales representative call them back with 24 hours
 				
