--- a/src/scss/blocks/_quiz.scss
+++ b/src/scss/blocks/_quiz.scss
@@ -14,9 +14,10 @@
 			left: 0;
 			top: 0;
 			bottom: 0;
-			width: 20%;
+			width: 0%;
 			background-color: $green;
 			border-radius: 2px;
+			transition: .5s;
 		}
 	}
 	&-plate{
